# sdl2_game_tutorials

./: .gitignore  README.md
shoot_them_up/: CMakeLists.txt
shoot_them_up/include/: bullet.hpp  color.hpp  enemy.hpp  exception.hpp  game.hpp  game_object.hpp  game_utility.hpp  player.hpp  screen.hpp
shoot_them_up/src/: bullet.cpp  enemy.cpp  game.cpp  game_utility.cpp  main.cpp  player.cpp  screen.cpp
